horizontal scrolling is now possible. There is no a need to fix to scroll smooth to section 1 to section to

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 html {
     scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+    overflow-y: scroll;
 }
 * {
     margin: 0;
@@ -8,15 +10,7 @@ html {
     box-sizing: border-box;
 }
 
-html {
-    scroll-snap-type: y mandatory;
-    overflow-y: scroll;
-}
 
-section {
-    scroll-snap-align: start;
-    height: 100vh;
-}
 header::before {
     content: "";
     position: absolute;
@@ -223,27 +217,22 @@ video {
 }
 
 /* ------------------------------------------------------------------------ */
-
-
-.service-box {
-    height: 100%;
+.races {
+    padding-top: 5vh;
+    margin-left: 20vw;
+    padding-right:40vw;
+    width: -moz-fit-content;
+    width: fit-content;
     display: flex;
-    padding-left: 18vh;
-    align-items: flex-end;
-    padding-bottom: 10vh;
-    overflow-x: scroll;
+    flex-wrap: nowrap;
 }
-
 .service-container {
     box-sizing: border-box;
-    flex: 0 0 auto; /* Flex-Item, das seine Größe behält */
+    flex: 0 0 auto; 
     height: 65vh;
-    width:120vh;
+    width: 120vh;
     display: flex;
     position: relative;
-    overflow: hidden;
-  
-    
 }
 
 .service-image {
@@ -253,19 +242,17 @@ video {
     object-fit: fill;
 }
 
-
 .image-container {
     width: 90%;
     height: 100%;
 }
-
 
 .service-text-container {
     color: white;
     position: absolute;
     height: 100%;
     width: 100%;
-    padding-bottom:10vh ;
+    padding-bottom: 10vh;
     padding-left: 2.8vw;
     display: flex;
     flex-direction: column;
@@ -276,10 +263,7 @@ video {
     font-size: 1.5vh;
 }
 .service-label-container {
-font-size: 5vh;
-font-weight: 800;
+    font-size: 5vh;
+    font-weight: 800;
 }
 
-.service-conainer:hover {
-
-}
